# multithread_plugin_vm

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  script1.py  script2.py
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: interface.cpp  interface.h  main.cpp  matrix.cpp  matrix.h  mxw_pyproxy_main.cpp  mxw_pyproxy_main.h  my_item.cpp  my_item.h  texture.cpp  texture.h  win.cpp  win.h
